--- a/1091.html
+++ b/1091.html
@@ -174,7 +174,7 @@ $(document).ready(function() {
     <div class="dialog-mask1" onclick="closeLogin1()"></div>
     <div class="dialog-plane1">
         <h2>管理员登陆</h2>
-        <form class="search-form1" action="/index.php?act=dologin" method="post">
+        <form class="search-form1" action="https://linji.cn/index.php?act=dologin" method="post">
             <div class="search-form-input-plane1">
                 <input type="password" class="search-keyword1" name="pass" autocomplete="on" placeholder="输入密码..." required="required" value="">
 	   <input name="l" value="" type="hidden">
@@ -194,7 +194,7 @@ $(document).ready(function() {
     <div class="dialog-mask" onclick="closeSearch()"></div>
     <div class="dialog-plane">
         <h2>搜索内容</h2>
-        <form class="search-form" action="/index.php" method="get" role="search">
+        <form class="search-form" action="https://linji.cn/index.php" method="get" role="search">
             <div class="search-form-input-plane">
                 <input type="text" class="search-keyword" name="s" autocomplete="on" placeholder="搜索内容" required="required" value="">
             </div>
@@ -358,7 +358,7 @@ document.body.addEventListener('input', POWERMODE);
     margin-left: 0px;
 }
 </style></div>
-	   <form method="get" class="search-form" action="/index.php"> <input class="search-text" name="s" autocomplete="on" placeholder="输入关键词搜索..." required="required" type="text" value=""> <button class="search-submit" alt="搜索" type="submit">搜索</button></form>
+	   <form method="get" class="search-form" action="https://linji.cn/index.php"> <input class="search-text" name="s" autocomplete="on" placeholder="输入关键词搜索..." required="required" type="text" value=""> <button class="search-submit" alt="搜索" type="submit">搜索</button></form>
 	   </div>   
 </div>
 </div>
@@ -634,7 +634,7 @@ document.body.addEventListener('input', POWERMODE);
 <h3 id="四、个人感悟与展望">四、个人感悟与展望</h3>
 <p>参加此次培训，让我深刻认识到教育改革不仅是教材形式上的更新换代，更是教育理念的根本转变。作为一线教师，我们需要紧跟时代的步伐，不断学习和吸收先进的教育教学理论，努力提升自身素质，才能更好地服务于学生的发展需求。</p>
 <p>未来的工作中，我计划将本次培训中学到的新方法融入日常教学中，特别是针对低年级学生的识字教学，尝试更多元化的教学模式，激发孩子们的学习兴趣；同时，在课堂上注重培养学生的综合素质，促进其全面发展。我相信，只要我们每一位教育工作者都能秉持这样的信念前行，定能共同书写出更加辉煌的小学语文教育新篇章！</p></div>
-<p class="time clb">继续教育 2025-03-18 22:56:59 通过 网页 <i class="iconfont icon-view"></i> 浏览(1917) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+<p class="time clb">继续教育 2025-03-18 22:56:59 通过 网页 <i class="iconfont icon-view"></i> 浏览(1931) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
 	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div></div>  
 <!-- 上一篇 下一篇开始 -->
