--- a/1145.html
+++ b/1145.html
@@ -581,10 +581,42 @@ document.body.addEventListener('input', POWERMODE);
 </style>
 <script src="/assets/js/translate.js"></script>
   <div id="content" style="position: relative;">
+    <!-- <head>中添加听读功能样式 -->
+<style>
+  /* 句子高亮样式 */
+.sentence.current {
+  background-color: #fffacd; /* 淡黄色高亮 */
+  border-radius: 3px;
+}
+.sentence {
+  cursor: pointer;
+}
+</style>
+<!-- 听读控制面板（插入到printview容器前） -->
+<div class="reader-panel" style="margin: 20px 0;display: none;">
+  <div class="controls">
+    <button id="playBtn" class="btn" onclick="handlePlayAction('play')">开始</button>
+    <button id="pauseBtn" class="btn" disabled onclick="handlePlayAction('pause')">暂停</button>
+    <button id="resumeBtn" class="btn" disabled onclick="handlePlayAction('resume')">继续</button>
+    <button id="stopBtn" class="btn" disabled onclick="handlePlayAction('stop')">停止</button>
+  </div>
+  <div class="voice-control">
+    <label for="voiceSelect">选择语音</label>
+    <select id="voiceSelect" class="voice-select" aria-label="选择朗读语音"></select>
+  </div>
+  <div class="progress-container">
+    <div class="progress-info">
+      进度: <span id="progressText">0/0</span>
+    </div>
+    <div class="progress-bar">
+      <div class="progress-fill" id="progressFill"></div>
+    </div>
+  </div>
+</div>
   <div class="breadcrumb" style="margin-top: -5px;"><svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home" style="width: 10px;   width: 14px;height: 14px;vertical-align: -2px;
 "><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg><a href="/" style="padding-left: 5px;color: #7d8c8e;">首页</a>
 <span>/</span><a href="/b2/list-2.html" style="color: #7d8c8e;">继续教育</a><span>/</span>正文</div>
-<span id="translate" style="border: 0px;cursor: pointer;float: right;color: #7d8c8e;font-size: 12px;margin-top: -5px;"></span>
+<button id="playBtn" class="btn" onclick="handlePlayAction('play')" style="max-width: 50%;opacity: .4;float: right;height: 24px;margin-top: -6px;color: black;background: #f0f0f5;" title="收听本文"><i class="fa fa-headphones" aria-hidden="true"></i> 收听本文</button><span id="translate" style="border: 0px;cursor: pointer;float: right;color: #7d8c8e;font-size: 12px;margin-top: -5px;"></span>
 
 <style type="text/css">
 	span#translate select {
@@ -688,9 +720,9 @@ position: relative;
     </div> 
 </div>
 <table border="1" style="text-align: center;font-size: 17px;line-height: 1.5em;width: 100%;" cellspacing="0" cellpadding="15"><tbody><tr style="font-weight: 600;"><td>学科</td><td>直播时间</td></tr><tr><td>小学英语(PEP)</td><td>7月14日—7月15日</td></tr><tr><td>小学英语(精通)</td><td>7月14日—7月15日</td></tr><tr><td>小学科学</td><td>7月14日—7月15日</td></tr><tr><td>艺术·唱游·音乐(小学)</td><td>7月14日—7月15日</td></tr><tr><td>艺术·美术(小学)</td><td>7月14日—7月15日</td></tr><tr><td>义教体育与健康</td><td>7月14日—7月15日</td></tr><tr><td>义教信息科技</td><td>7月14日-7月15日</td></tr><tr><td>小学语文</td><td>7月16日一7月17日</td></tr><tr><td>初中数学</td><td>7月18日—7月19日</td></tr><tr><td>初中物理</td><td>7月18日—7月19日</td></tr><tr><td>初中化学</td><td>7月18日—7月19日</td></tr><tr><td>初中生物学</td><td>7月18日—7月19日</td></tr><tr><td>初中英语</td><td>7月18日—7月19日</td></tr><tr><td>小学数学</td><td>7月20日—7月21日</td></tr><tr><td>初中语文</td><td>7月22日-7月23日</td></tr><tr><td>初中历史</td><td>7月22日—7月23日</td></tr><tr><td>初中地理</td><td>7月24日—7月25日</td></tr><tr><td>艺术·音乐(初中)</td><td>7月24日—7月25日</td></tr><tr><td>艺术·美术(初中)</td><td>7月24日—7月25日</td></tr><tr><td>初中日语</td><td>7月24日—7月25日</td></tr><tr><td>初中俄语</td><td>7月24日—7月25日</td></tr><tr><td>艺术·影视(含数字媒体艺术)/戏剧(含戏曲)/舞蹈</td><td>7月24日—7月25日</td></tr><tr><td>小学道德与法治</td><td>7月24日—7月25日</td></tr><tr><td>初中道德与法治</td><td>7月24日—7月25日</td></tr><tr><td>习近平新时代中国特色社会主义思想学生读本(小学)</td><td>7月26日</td></tr></tbody></table></center></div>
-<p class="time clb">继续教育 2025-07-10 15:39:20 通过 手机 <i class="iconfont icon-view"></i> 浏览(3746) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+</div><p class="time clb">继续教育 2025-07-10 15:39:20 通过 手机 <i class="iconfont icon-view"></i> 浏览(3828) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
-	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div></div>  
+	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div>  
 <!-- 上一篇 下一篇开始 -->
 <div style="overflow: hidden;margin-bottom: 10px;">
 
@@ -1051,5 +1083,7 @@ document.addEventListener('DOMContentLoaded', function () {
 });
 </script>
 <!-- 为代码块加上双击复制功能 -->
+<!-- </body>前插入听读核心JS -->
+<script src="/assets/js/playBtn.js"></script>
 </body>
 </html>
