--- a/1091.html
+++ b/1091.html
@@ -583,13 +583,16 @@ document.body.addEventListener('input', POWERMODE);
   <div id="content" style="position: relative;">
     <!-- <head>中添加听读功能样式 -->
 <style>
-  /* 句子高亮样式 */
-.sentence.current {
-  background-color: #fffacd; /* 淡黄色高亮 */
-  border-radius: 3px;
-}
 .sentence {
   cursor: pointer;
+  /* 默认 inline，不破坏排版 */
+}
+.sentence:hover {
+  background-color: #f0f0f0;
+}
+.sentence.current {
+  background-color: #ffeb3b; /* 黄色高亮 */
+  border-radius: 2px;
 }
 </style>
 <!-- 听读控制面板（插入到printview容器前） -->
@@ -666,7 +669,7 @@ document.body.addEventListener('input', POWERMODE);
 <h3 id="四、个人感悟与展望">四、个人感悟与展望</h3>
 <p>参加此次培训，让我深刻认识到教育改革不仅是教材形式上的更新换代，更是教育理念的根本转变。作为一线教师，我们需要紧跟时代的步伐，不断学习和吸收先进的教育教学理论，努力提升自身素质，才能更好地服务于学生的发展需求。</p>
 <p>未来的工作中，我计划将本次培训中学到的新方法融入日常教学中，特别是针对低年级学生的识字教学，尝试更多元化的教学模式，激发孩子们的学习兴趣；同时，在课堂上注重培养学生的综合素质，促进其全面发展。我相信，只要我们每一位教育工作者都能秉持这样的信念前行，定能共同书写出更加辉煌的小学语文教育新篇章！</p></div>
-</div><p class="time clb">继续教育 2025-03-18 22:56:59 通过 网页 <i class="iconfont icon-view"></i> 浏览(1982) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+</div><p class="time clb">继续教育 2025-03-18 22:56:59 通过 网页 <i class="iconfont icon-view"></i> 浏览(1984) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
 	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div>  
 <!-- 上一篇 下一篇开始 -->
