--- a/707.html
+++ b/707.html
@@ -583,13 +583,16 @@ document.body.addEventListener('input', POWERMODE);
   <div id="content" style="position: relative;">
     <!-- <head>中添加听读功能样式 -->
 <style>
-  /* 句子高亮样式 */
-.sentence.current {
-  background-color: #fffacd; /* 淡黄色高亮 */
-  border-radius: 3px;
-}
 .sentence {
   cursor: pointer;
+  /* 默认 inline，不破坏排版 */
+}
+.sentence:hover {
+  background-color: #f0f0f0;
+}
+.sentence.current {
+  background-color: #ffeb3b; /* 黄色高亮 */
+  border-radius: 2px;
 }
 </style>
 <!-- 听读控制面板（插入到printview容器前） -->
@@ -718,7 +721,7 @@ document.body.addEventListener('input', POWERMODE);
 <p style="text-indent:40px;">4、听了陈星宇老师的四年级科学课《感受我们的呼吸》，不但能学习她的教法与学法，更让我们学习到卫生健康的知识，陈老师生动的课堂吸引孩子们，更吸引了听课的老师们。真的是不虚些行。</p>
 
 <p style="text-indent:40px;">总之，跟岗学习，忙碌而充实，辛苦而快乐，时间虽然短暂，但收获也不少，它让我开阔了眼界，提高了我的理论素养，提升了我的教学教育水平，令我受益匪浅。教坛无边，学海无涯。回到自己的工作岗位后，我们必将自己所学，融入到工作中，把优质资源、做法，带回我们的学校，点燃星星之火，为家乡教育事业的进一步发展贡献自己的力量。</p></div>
-</div><p class="time clb">继续教育 2021-11-26 20:28:54 通过 网页 <i class="iconfont icon-view"></i> 浏览(3136) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+</div><p class="time clb">继续教育 2021-11-26 20:28:54 通过 网页 <i class="iconfont icon-view"></i> 浏览(3137) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
 	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div>  
 <!-- 上一篇 下一篇开始 -->
