--- a/827.html
+++ b/827.html
@@ -583,13 +583,16 @@ document.body.addEventListener('input', POWERMODE);
   <div id="content" style="position: relative;">
     <!-- <head>中添加听读功能样式 -->
 <style>
-  /* 句子高亮样式 */
-.sentence.current {
-  background-color: #fffacd; /* 淡黄色高亮 */
-  border-radius: 3px;
-}
 .sentence {
   cursor: pointer;
+  /* 默认 inline，不破坏排版 */
+}
+.sentence:hover {
+  background-color: #f0f0f0;
+}
+.sentence.current {
+  background-color: #ffeb3b; /* 黄色高亮 */
+  border-radius: 2px;
 }
 </style>
 <!-- 听读控制面板（插入到printview容器前） -->
@@ -791,7 +794,7 @@ document.body.addEventListener('input', POWERMODE);
 </div></div>
 
 <div id="extwaiokist" style="display:none" v="fifea" q="c142e208" c="2.564" i="9" u="11.26" s="03172314" sg="svr_undefined-ga_03172314-bai_03162320" d="1" w="false" e="" a="2" m="BMe=" vn="9zsim"><div id="extwaigglbit" style="display:none" v="fifea" q="c142e208" c="2.564" i="9" u="11.26" s="03172314" sg="svr_undefined-ga_03172314-bai_03162320" d="1" w="false" e="" a="2" m="BMe="></div></div></div></div>
-</div><p class="time clb">继续教育 2023-02-16 14:27:58 通过 网页 <i class="iconfont icon-view"></i> 浏览(3801) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+</div><p class="time clb">继续教育 2023-02-16 14:27:58 通过 网页 <i class="iconfont icon-view"></i> 浏览(3803) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
 	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div>  
 <!-- 上一篇 下一篇开始 -->
