--- a/576.html
+++ b/576.html
@@ -583,13 +583,16 @@ document.body.addEventListener('input', POWERMODE);
   <div id="content" style="position: relative;">
     <!-- <head>中添加听读功能样式 -->
 <style>
-  /* 句子高亮样式 */
-.sentence.current {
-  background-color: #fffacd; /* 淡黄色高亮 */
-  border-radius: 3px;
-}
 .sentence {
   cursor: pointer;
+  /* 默认 inline，不破坏排版 */
+}
+.sentence:hover {
+  background-color: #f0f0f0;
+}
+.sentence.current {
+  background-color: #ffeb3b; /* 黄色高亮 */
+  border-radius: 2px;
 }
 </style>
 <!-- 听读控制面板（插入到printview容器前） -->
@@ -634,7 +637,7 @@ document.body.addEventListener('input', POWERMODE);
 <div  id="printview">
 <div class="text">
 经研究和论证，我省2020年专业技术人员继续教育公需科目确定为以下两个专题：“广东‘十四五’经济社会发展趋势与战略重点”和“区块链技术和广东产业创新发展”，专业技术人员可以在“广东省专业技术人员继续教育管理系统”免费学习。2020年继续教育学时要求公需课30学时、专业课42学时、选修课12学时。</div>
-</div><p class="time clb">继续教育 2020-04-07 12:10:14 通过 网页 <i class="iconfont icon-view"></i> 浏览(4142) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+</div><p class="time clb">继续教育 2020-04-07 12:10:14 通过 网页 <i class="iconfont icon-view"></i> 浏览(4143) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
 	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div>  
 <!-- 上一篇 下一篇开始 -->
