--- a/715.html
+++ b/715.html
@@ -583,13 +583,16 @@ document.body.addEventListener('input', POWERMODE);
   <div id="content" style="position: relative;">
     <!-- <head>中添加听读功能样式 -->
 <style>
-  /* 句子高亮样式 */
-.sentence.current {
-  background-color: #fffacd; /* 淡黄色高亮 */
-  border-radius: 3px;
-}
 .sentence {
   cursor: pointer;
+  /* 默认 inline，不破坏排版 */
+}
+.sentence:hover {
+  background-color: #f0f0f0;
+}
+.sentence.current {
+  background-color: #ffeb3b; /* 黄色高亮 */
+  border-radius: 2px;
 }
 </style>
 <!-- 听读控制面板（插入到printview容器前） -->
@@ -650,7 +653,7 @@ document.body.addEventListener('input', POWERMODE);
 <a href="https://www.meipian.cn/3qxjdsh8" target="_blank">15、引领成长，逐梦前行</a><br><br>
 <a href="https://www.meipian.cn/3qy712du" target="_blank">16、记世行贷款村小、教学点教师全科教学能力提升培训6班班级活动</a><br><br>
 <a href="https://www.meipian.cn/3r2v4i8e" target="_blank">17、全科教师培训（6）班之培训成果汇报演出篇—2021/08/21</a></div>
-</div><p class="time clb">继续教育 2022-01-10 16:30:48 通过 网页 <i class="iconfont icon-view"></i> 浏览(2873) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+</div><p class="time clb">继续教育 2022-01-10 16:30:48 通过 网页 <i class="iconfont icon-view"></i> 浏览(2874) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
 	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div>  
 <!-- 上一篇 下一篇开始 -->
