--- a/716.html
+++ b/716.html
@@ -583,13 +583,16 @@ document.body.addEventListener('input', POWERMODE);
   <div id="content" style="position: relative;">
     <!-- <head>中添加听读功能样式 -->
 <style>
-  /* 句子高亮样式 */
-.sentence.current {
-  background-color: #fffacd; /* 淡黄色高亮 */
-  border-radius: 3px;
-}
 .sentence {
   cursor: pointer;
+  /* 默认 inline，不破坏排版 */
+}
+.sentence:hover {
+  background-color: #f0f0f0;
+}
+.sentence.current {
+  background-color: #ffeb3b; /* 黄色高亮 */
+  border-radius: 2px;
 }
 </style>
 <!-- 听读控制面板（插入到printview容器前） -->
@@ -648,7 +651,7 @@ document.body.addEventListener('input', POWERMODE);
 <a href="https://www.meipian.cn/3sydta7i" target="_blank">14、全科教师培训6班自主研修之教学技能展示与交流</a><br><br>
 <a href="https://www.meipian.cn/3t0pnvvt" target="_blank">15、增长专业知识 、提升育人素养</a><br><br>
 <a href="https://www.meipian.cn/3s9z8goe" target="_blank">16、成功来自坚持，执著创造奇迹</a></div>
-</div><p class="time clb">继续教育 2022-01-10 21:31:05 通过 网页 <i class="iconfont icon-view"></i> 浏览(2759) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+</div><p class="time clb">继续教育 2022-01-10 21:31:05 通过 网页 <i class="iconfont icon-view"></i> 浏览(2761) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
 	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div>  
 <!-- 上一篇 下一篇开始 -->
