--- a/860.html
+++ b/860.html
@@ -583,13 +583,16 @@ document.body.addEventListener('input', POWERMODE);
   <div id="content" style="position: relative;">
     <!-- <head>中添加听读功能样式 -->
 <style>
-  /* 句子高亮样式 */
-.sentence.current {
-  background-color: #fffacd; /* 淡黄色高亮 */
-  border-radius: 3px;
-}
 .sentence {
   cursor: pointer;
+  /* 默认 inline，不破坏排版 */
+}
+.sentence:hover {
+  background-color: #f0f0f0;
+}
+.sentence.current {
+  background-color: #ffeb3b; /* 黄色高亮 */
+  border-radius: 2px;
 }
 </style>
 <!-- 听读控制面板（插入到printview容器前） -->
@@ -658,7 +661,7 @@ document.body.addEventListener('input', POWERMODE);
 <p>高等教育教师研修管理员咨询电话：<br></p>
 <p>李老师 电话：010-69228543 15600097821<br></p>
 <p>学员服务电话：4008757650</p></div>
-</div><p class="time clb">继续教育 2023-06-06 12:45:33 通过 网页 <i class="iconfont icon-view"></i> 浏览(2804) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+</div><p class="time clb">继续教育 2023-06-06 12:45:33 通过 网页 <i class="iconfont icon-view"></i> 浏览(2805) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
 	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div>  
 <!-- 上一篇 下一篇开始 -->
